Issue SB-13428 fix: Explore- Course / Course page : UI glitch is visible on Course page for Topis selection pop up

--- a/src/app/client/src/assets/styles/component/_buttons.scss
+++ b/src/app/client/src/assets/styles/component/_buttons.scss
@@ -82,7 +82,7 @@ a.sb-btn {
   padding: ($base-block-space * 1) ($base-block-space * 2);
 }
 .sb-btn-xs {
-  min-height: ($base-block-space * 3);
+  height: ($base-block-space * 3);
   padding: ($base-block-space * 0) ($base-block-space * 1);
   font-size: $font-size-sm;
 }
